# office_essentials_agent

./: .gitignore  ARCHITECTURE.md  PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements.txt
agent/: __init__.py  optimizer.py  planner.py  purchaser.py  schemas.py  search.py
api/: __init__.py  config.py  main.py
api/database/: __init__.py  connection.py
api/models/: __init__.py  base.py  customer.py  order.py  order_item.py
api/routes/: __init__.py  customers.py  health.py  orders.py  procurement.py
api/schemas/: __init__.py  customer.py  order.py  procurement.py
api/services/: __init__.py  customer_service.py  order_service.py  procurement_service.py
aws/ec2/: user-data.sh
aws/scripts/: deploy.sh
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js  utils.js
integrations/: __init__.py  amazon.py  base.py  costco.py  mock_vendor.py  staples.py
policies/: __init__.py  approvals.py  budget.py  preferences.py
scripts/: run_local.py  seed_data.py  setup_db.py
tests/: __init__.py
tests/test_agent/: __init__.py  test_search.py
tests/test_api/: __init__.py  test_customers.py
workflows/: __init__.py  procure_office_essentials.py
